--- a/scss/dry-animate/_functions/_mixin.scss
+++ b/scss/dry-animate/_functions/_mixin.scss
@@ -8,7 +8,7 @@
 // Main plugin interface
 ///////////////////////////////
 
-@mixin animate($name, $duration: 1s, $delay: 0s, $iterations: 1, $fillmode: both) {
+@mixin animate($name, $duration: 1s, $delay: 0s, $iterations: 1) {
 
       // Normalize input
       $name: da-toValue($name);
@@ -20,7 +20,7 @@
       @if da-render($name) == true {
         @extend %#{$name};
         animation: $name $duration $delay $iterations;
-        animation-fill-mode: $fillmode;
+        animation-fill-mode: both;
       } @else {
         @error "Neither #{$name}, nor 'all', nor #{$name}'s parent-group are declared in $da-use."
       }
