Renam $da-use to $da-animations

--- a/scss/dry-animate.scss
+++ b/scss/dry-animate.scss
@@ -11,7 +11,7 @@
 $da-duration: 1s;
 
 // Used animations. Can be single animations, animation-groups, or "all"
-$da-use: (all);
+$da-animations: (all);
 
 // Imports
 ///////////////////////////////
