Fix all paramter-type in $da-animations

--- a/scss/dry-animate/_functions/_functions.scss
+++ b/scss/dry-animate/_functions/_functions.scss
@@ -64,7 +64,7 @@
   @if sl-contain($list, $value) {
     @return true;
   }
-  @else if sl-contain($list, "all") {
+  @else if sl-contain($list, all) {
     @return true;
   }
   @else if da-in-category($value, $list) {
