Move da-import conditional to files

--- a/scss/dry-animate/_functions/_categories.scss
+++ b/scss/dry-animate/_functions/_categories.scss
@@ -62,8 +62,8 @@ $da-categories: (
   ),
 
   "lightspeed": (
-    lightspeedIn,
-    lightspeedOut
+    lightSpeedIn,
+    lightSpeedOut
   ),
 
   "rotating_entrances": (
