--- a/scss/dry-animate/fading_entrances/_fadeInLeft.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInLeft.scss
@@ -4,17 +4,19 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_entrances/fadeInLeft.css
 ///////////////////////////////
 
-%fadeInLeft {
-  @at-root {
-    @keyframes fadeInLeft {
-      0% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0);
-      }
+@if da-import("fadeInLeft") == true {
+  %fadeInLeft {
+    @at-root {
+      @keyframes fadeInLeft {
+        0% {
+          opacity: 0;
+          transform: translate3d(-100%, 0, 0);
+        }
 
-      100% {
-        opacity: 1;
-        transform: none;
+        100% {
+          opacity: 1;
+          transform: none;
+        }
       }
     }
   }
