--- a/scss/dry-animate/fading_exits/_fadeOutRightBig.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutRightBig.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutRightBig.css
 ///////////////////////////////
 
-%fadeOutRightBig {
-  @at-root {
-    @keyframes fadeOutRightBig {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutRightBig") == true {
+  %fadeOutRightBig {
+    @at-root {
+      @keyframes fadeOutRightBig {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(2000px, 0, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(2000px, 0, 0);
+        }
       }
     }
   }
