--- a/scss/dry-animate/rotating_entrances/_rotateInDownRight.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateInDownRight.scss
@@ -4,19 +4,21 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_entrances/rotateInDownRight.css
 ///////////////////////////////
 
-%rotateInDownRight {
-  @at-root {
-    @keyframes rotateInDownRight {
-      0% {
-        transform-origin: right bottom;
-        transform: rotate3d(0, 0, 1, 45deg);
-        opacity: 0;
-      }
+@if da-import("rotateInDownRight") == true {
+  %rotateInDownRight {
+    @at-root {
+      @keyframes rotateInDownRight {
+        0% {
+          transform-origin: right bottom;
+          transform: rotate3d(0, 0, 1, 45deg);
+          opacity: 0;
+        }
 
-      100% {
-        transform-origin: right bottom;
-        transform: none;
-        opacity: 1;
+        100% {
+          transform-origin: right bottom;
+          transform: none;
+          opacity: 1;
+        }
       }
     }
   }
