--- a/scss/dry-animate/rotating_entrances/_rotateInUpRight.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateInUpRight.scss
@@ -4,19 +4,21 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_entrances/rotateInUpRight.css
 ///////////////////////////////
 
-%rotateInUpRight {
-  @at-root {
-    @keyframes rotateInUpRight {
-      0% {
-        transform-origin: right bottom;
-        transform: rotate3d(0, 0, 1, -90deg);
-        opacity: 0;
-      }
+@if da-import("rotateInUpRight") == true {
+  %rotateInUpRight {
+    @at-root {
+      @keyframes rotateInUpRight {
+        0% {
+          transform-origin: right bottom;
+          transform: rotate3d(0, 0, 1, -90deg);
+          opacity: 0;
+        }
 
-      100% {
-        transform-origin: right bottom;
-        transform: none;
-        opacity: 1;
+        100% {
+          transform-origin: right bottom;
+          transform: none;
+          opacity: 1;
+        }
       }
     }
   }
