--- a/scss/dry-animate/sliding_entrances/_slideInUp.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInUp.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_entrances/slideInUp.css
 ///////////////////////////////
 
-%slideInUp {
-  @at-root {
-    @keyframes slideInUp {
-      0% {
-        transform: translate3d(0, 100%, 0);
-        visibility: visible;
-      }
+@if da-import("slideInUp") == true {
+  %slideInUp {
+    @at-root {
+      @keyframes slideInUp {
+        0% {
+          transform: translate3d(0, 100%, 0);
+          visibility: visible;
+        }
 
-      100% {
-        transform: translate3d(0, 0, 0);
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
       }
     }
   }
