--- a/scss/dry-animate/sliding_exits/_slideOutUp.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutUp.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_exits/slideOutUp.css
 ///////////////////////////////
 
-%slideOutUp {
-  @at-root {
-    @keyframes slideOutUp {
-      0% {
-        transform: translate3d(0, 0, 0);
-      }
+@if da-import("slideOutUp") == true {
+  %slideOutUp {
+    @at-root {
+      @keyframes slideOutUp {
+        0% {
+          transform: translate3d(0, 0, 0);
+        }
 
-      100% {
-        visibility: hidden;
-        transform: translate3d(0, -100%, 0);
+        100% {
+          visibility: hidden;
+          transform: translate3d(0, -100%, 0);
+        }
       }
     }
   }
