--- a/scss/dry-animate/zooming_entrances/_zoomIn.scss
+++ b/scss/dry-animate/zooming_entrances/_zoomIn.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/zooming_entrances/zoomIn.css
 ///////////////////////////////
 
-%zoomIn {
-  @at-root {
-    @keyframes zoomIn {
-      0% {
-        opacity: 0;
-        transform: scale3d(.3, .3, .3);
-      }
+@if da-import("zoomIn") == true {
+  %zoomIn {
+    @at-root {
+      @keyframes zoomIn {
+        0% {
+          opacity: 0;
+          transform: scale3d(.3, .3, .3);
+        }
 
-      50% {
-        opacity: 1;
+        50% {
+          opacity: 1;
+        }
       }
     }
   }
