--- a/scss/dry-animate/attention_seekers/_pulse.scss
+++ b/scss/dry-animate/attention_seekers/_pulse.scss
@@ -6,19 +6,21 @@
 
 /* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
-%pulse {
-  @at-root {
-    @keyframes pulse {
-      0% {
-        transform: scale3d(1, 1, 1);
-      }
+@if da-import("pulse") == true {
+  %pulse {
+    @at-root {
+      @keyframes pulse {
+        0% {
+          transform: scale3d(1, 1, 1);
+        }
 
-      50% {
-        transform: scale3d(1.05, 1.05, 1.05);
-      }
+        50% {
+          transform: scale3d(1.05, 1.05, 1.05);
+        }
 
-      100% {
-        transform: scale3d(1, 1, 1);
+        100% {
+          transform: scale3d(1, 1, 1);
+        }
       }
     }
   }
