--- a/scss/dry-animate/attention_seekers/_rubberBand.scss
+++ b/scss/dry-animate/attention_seekers/_rubberBand.scss
@@ -4,35 +4,37 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/attention_seekers/rubberBand.css
 ///////////////////////////////
 
-%rubberBand {
-  @at-root {
-    @keyframes rubberBand {
-      0% {
-        transform: scale3d(1, 1, 1);
-      }
+@if da-import("rubberBand") == true {
+  %rubberBand {
+    @at-root {
+      @keyframes rubberBand {
+        0% {
+          transform: scale3d(1, 1, 1);
+        }
 
-      30% {
-        transform: scale3d(1.25, 0.75, 1);
-      }
+        30% {
+          transform: scale3d(1.25, 0.75, 1);
+        }
 
-      40% {
-        transform: scale3d(0.75, 1.25, 1);
-      }
+        40% {
+          transform: scale3d(0.75, 1.25, 1);
+        }
 
-      50% {
-        transform: scale3d(1.15, 0.85, 1);
-      }
+        50% {
+          transform: scale3d(1.15, 0.85, 1);
+        }
 
-      65% {
-        transform: scale3d(.95, 1.05, 1);
-      }
+        65% {
+          transform: scale3d(.95, 1.05, 1);
+        }
 
-      75% {
-        transform: scale3d(1.05, .95, 1);
-      }
+        75% {
+          transform: scale3d(1.05, .95, 1);
+        }
 
-      100% {
-        transform: scale3d(1, 1, 1);
+        100% {
+          transform: scale3d(1, 1, 1);
+        }
       }
     }
   }
