--- a/scss/dry-animate/attention_seekers/_tada.scss
+++ b/scss/dry-animate/attention_seekers/_tada.scss
@@ -4,27 +4,29 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/attention_seekers/tada.css
 ///////////////////////////////
 
-%tada {
-  @at-root {
-    @keyframes tada {
-      0% {
-        transform: scale3d(1, 1, 1);
-      }
+@if da-import("tada") == true {
+  %tada {
+    @at-root {
+      @keyframes tada {
+        0% {
+          transform: scale3d(1, 1, 1);
+        }
 
-      10%, 20% {
-        transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
-      }
+        10%, 20% {
+          transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
+        }
 
-      30%, 50%, 70%, 90% {
-        transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
-      }
+        30%, 50%, 70%, 90% {
+          transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+        }
 
-      40%, 60%, 80% {
-        transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
-      }
+        40%, 60%, 80% {
+          transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+        }
 
-      100% {
-        transform: scale3d(1, 1, 1);
+        100% {
+          transform: scale3d(1, 1, 1);
+        }
       }
     }
   }
