--- a/scss/dry-animate/bouncing_entrances/_bounceIn.scss
+++ b/scss/dry-animate/bouncing_entrances/_bounceIn.scss
@@ -4,38 +4,40 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/bouncing_entrances/bounceIn.css
 ///////////////////////////////
 
-%bounceIn {
-  @at-root {
-    @keyframes bounceIn {
-      0%, 20%, 40%, 60%, 80%, 100% {
-        animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-      }
+@if da-import("bounceIn") == true {
+  %bounceIn {
+    @at-root {
+      @keyframes bounceIn {
+        0%, 20%, 40%, 60%, 80%, 100% {
+          animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        }
 
-      0% {
-        opacity: 0;
-        transform: scale3d(.3, .3, .3);
-      }
+        0% {
+          opacity: 0;
+          transform: scale3d(.3, .3, .3);
+        }
 
-      20% {
-        transform: scale3d(1.1, 1.1, 1.1);
-      }
+        20% {
+          transform: scale3d(1.1, 1.1, 1.1);
+        }
 
-      40% {
-        transform: scale3d(.9, .9, .9);
-      }
+        40% {
+          transform: scale3d(.9, .9, .9);
+        }
 
-      60% {
-        opacity: 1;
-        transform: scale3d(1.03, 1.03, 1.03);
-      }
+        60% {
+          opacity: 1;
+          transform: scale3d(1.03, 1.03, 1.03);
+        }
 
-      80% {
-        transform: scale3d(.97, .97, .97);
-      }
+        80% {
+          transform: scale3d(.97, .97, .97);
+        }
 
-      100% {
-        opacity: 1;
-        transform: scale3d(1, 1, 1);
+        100% {
+          opacity: 1;
+          transform: scale3d(1, 1, 1);
+        }
       }
     }
   }
