--- a/scss/dry-animate/bouncing_exits/_bounceOutDown.scss
+++ b/scss/dry-animate/bouncing_exits/_bounceOutDown.scss
@@ -4,21 +4,23 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/bouncing_exits/bounceOutDown.css
 ///////////////////////////////
 
-%bounceOutDown {
-  @at-root {
-    @keyframes bounceOutDown {
-      20% {
-        transform: translate3d(0, 10px, 0);
-      }
+@if da-import("bounceOutDown") == true {
+  %bounceOutDown {
+    @at-root {
+      @keyframes bounceOutDown {
+        20% {
+          transform: translate3d(0, 10px, 0);
+        }
 
-      40%, 45% {
-        opacity: 1;
-        transform: translate3d(0, -20px, 0);
-      }
+        40%, 45% {
+          opacity: 1;
+          transform: translate3d(0, -20px, 0);
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(0, 2000px, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(0, 2000px, 0);
+        }
       }
     }
   }
