--- a/scss/dry-animate/fading_entrances/_fadeIn.scss
+++ b/scss/dry-animate/fading_entrances/_fadeIn.scss
@@ -4,15 +4,17 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_entrances/fadeIn.css
 ///////////////////////////////
 
-%fadeIn {
-  @at-root {
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
+@if da-import("fadeIn") == true {
+  %fadeIn {
+    @at-root {
+      @keyframes fadeIn {
+        0% {
+          opacity: 0;
+        }
 
-      100% {
-        opacity: 1;
+        100% {
+          opacity: 1;
+        }
       }
     }
   }
