--- a/scss/dry-animate/fading_entrances/_fadeInDown.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInDown.scss
@@ -4,17 +4,19 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_entrances/fadeInDown.css
 ///////////////////////////////
 
-%fadeInDown {
-  @at-root {
-    @keyframes fadeInDown {
-      0% {
-        opacity: 0;
-        transform: translate3d(0, -100%, 0);
-      }
+@if da-import("fadeInDown") == true {
+  %fadeInDown {
+    @at-root {
+      @keyframes fadeInDown {
+        0% {
+          opacity: 0;
+          transform: translate3d(0, -100%, 0);
+        }
 
-      100% {
-        opacity: 1;
-        transform: none;
+        100% {
+          opacity: 1;
+          transform: none;
+        }
       }
     }
   }
