--- a/scss/dry-animate/fading_entrances/_fadeInUpBig.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInUpBig.scss
@@ -4,17 +4,19 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_entrances/fadeInUpBig.css
 ///////////////////////////////
 
-%fadeInUpBig {
-  @at-root {
-    @keyframes fadeInUpBig {
-      0% {
-        opacity: 0;
-        transform: translate3d(0, 2000px, 0);
-      }
+@if da-import("fadeInUpBig") == true {
+  %fadeInUpBig {
+    @at-root {
+      @keyframes fadeInUpBig {
+        0% {
+          opacity: 0;
+          transform: translate3d(0, 2000px, 0);
+        }
 
-      100% {
-        opacity: 1;
-        transform: none;
+        100% {
+          opacity: 1;
+          transform: none;
+        }
       }
     }
   }
