--- a/scss/dry-animate/fading_exits/_fadeOut.scss
+++ b/scss/dry-animate/fading_exits/_fadeOut.scss
@@ -4,15 +4,17 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOut.css
 ///////////////////////////////
 
-%fadeOut {
-  @at-root {
-    @keyframes fadeOut {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOut") == true {
+  %fadeOut {
+    @at-root {
+      @keyframes fadeOut {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
+        100% {
+          opacity: 0;
+        }
       }
     }
   }
