--- a/scss/dry-animate/fading_exits/_fadeOutDown.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutDown.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutDown.css
 ///////////////////////////////
 
-%fadeOutDown {
-  @at-root {
-    @keyframes fadeOutDown {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutDown") == true {
+  %fadeOutDown {
+    @at-root {
+      @keyframes fadeOutDown {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(0, 100%, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(0, 100%, 0);
+        }
       }
     }
   }
