--- a/scss/dry-animate/fading_exits/_fadeOutDownBig.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutDownBig.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutDownBig.css
 ///////////////////////////////
 
-%fadeOutDownBig {
-  @at-root {
-    @keyframes fadeOutDownBig {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutDownBig") == true {
+  %fadeOutDownBig {
+    @at-root {
+      @keyframes fadeOutDownBig {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(0, 2000px, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(0, 2000px, 0);
+        }
       }
     }
   }
