--- a/scss/dry-animate/fading_exits/_fadeOutLeft.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutLeft.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutLeft.css
 ///////////////////////////////
 
-%fadeOutLeft {
-  @at-root {
-    @keyframes fadeOutLeft {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutLeft") == true {
+  %fadeOutLeft {
+    @at-root {
+      @keyframes fadeOutLeft {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(-100%, 0, 0);
+        }
       }
     }
   }
