--- a/scss/dry-animate/fading_exits/_fadeOutRight.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutRight.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutRight.css
 ///////////////////////////////
 
-%fadeOutRight {
-  @at-root {
-    @keyframes fadeOutRight {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutRight") == true {
+  %fadeOutRight {
+    @at-root {
+      @keyframes fadeOutRight {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(100%, 0, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(100%, 0, 0);
+        }
       }
     }
   }
