--- a/scss/dry-animate/fading_exits/_fadeOutUp.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutUp.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutUp.css
 ///////////////////////////////
 
-%fadeOutUp {
-  @at-root {
-    @keyframes fadeOutUp {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutUp") == true {
+  %fadeOutUp {
+    @at-root {
+      @keyframes fadeOutUp {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(0, -100%, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(0, -100%, 0);
+        }
       }
     }
   }
