--- a/scss/dry-animate/fading_exits/_fadeOutUpBig.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutUpBig.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/fading_exits/fadeOutUpBig.css
 ///////////////////////////////
 
-%fadeOutUpBig {
-  @at-root {
-    @keyframes fadeOutUpBig {
-      0% {
-        opacity: 1;
-      }
+@if da-import("fadeOutUpBig") == true {
+  %fadeOutUpBig {
+    @at-root {
+      @keyframes fadeOutUpBig {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(0, -2000px, 0);
+        100% {
+          opacity: 0;
+          transform: translate3d(0, -2000px, 0);
+        }
       }
     }
   }
