--- a/scss/dry-animate/flippers/_flipInX.scss
+++ b/scss/dry-animate/flippers/_flipInX.scss
@@ -4,32 +4,34 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/flippers/flipInX.css
 ///////////////////////////////
 
-%flipInX {
-  backface-visibility: visible !important;
-  @at-root {
-    @keyframes flipInX {
-      0% {
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-        animation-timing-function: ease-in;
-        opacity: 0;
-      }
+@if da-import("flipInX") == true {
+  %flipInX {
+    backface-visibility: visible !important;
+    @at-root {
+      @keyframes flipInX {
+        0% {
+          transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+          animation-timing-function: ease-in;
+          opacity: 0;
+        }
 
-      40% {
-        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-        animation-timing-function: ease-in;
-      }
+        40% {
+          transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+          animation-timing-function: ease-in;
+        }
 
-      60% {
-        transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
-        opacity: 1;
-      }
+        60% {
+          transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+          opacity: 1;
+        }
 
-      80% {
-        transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
-      }
+        80% {
+          transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+        }
 
-      100% {
-        transform: perspective(400px);
+        100% {
+          transform: perspective(400px);
+        }
       }
     }
   }
