--- a/scss/dry-animate/flippers/_flipInY.scss
+++ b/scss/dry-animate/flippers/_flipInY.scss
@@ -4,32 +4,34 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/flippers/flipInY.css
 ///////////////////////////////
 
-%flipInY {
-  backface-visibility: visible !important;
-  @at-root {
-    @keyframes flipInY {
-      0% {
-        transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
-        animation-timing-function: ease-in;
-        opacity: 0;
-      }
+@if da-import("flipInY") == true {
+  %flipInY {
+    backface-visibility: visible !important;
+    @at-root {
+      @keyframes flipInY {
+        0% {
+          transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+          animation-timing-function: ease-in;
+          opacity: 0;
+        }
 
-      40% {
-        transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
-        animation-timing-function: ease-in;
-      }
+        40% {
+          transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+          animation-timing-function: ease-in;
+        }
 
-      60% {
-        transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
-        opacity: 1;
-      }
+        60% {
+          transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+          opacity: 1;
+        }
 
-      80% {
-        transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
-      }
+        80% {
+          transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+        }
 
-      100% {
-        transform: perspective(400px);
+        100% {
+          transform: perspective(400px);
+        }
       }
     }
   }
