--- a/scss/dry-animate/flippers/_flipOutX.scss
+++ b/scss/dry-animate/flippers/_flipOutX.scss
@@ -4,22 +4,24 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/flippers/flipOutX.css
 ///////////////////////////////
 
-%flipOutX {
-  backface-visibility: visible !important;
-  @at-root {
-    @keyframes flipOutX {
-      0% {
-        transform: perspective(400px);
-      }
+@if da-import("flipOutX") == true {
+  %flipOutX {
+    backface-visibility: visible !important;
+    @at-root {
+      @keyframes flipOutX {
+        0% {
+          transform: perspective(400px);
+        }
 
-      30% {
-        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-        opacity: 1;
-      }
+        30% {
+          transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+          opacity: 1;
+        }
 
-      100% {
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-        opacity: 0;
+        100% {
+          transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+          opacity: 0;
+        }
       }
     }
   }
