--- a/scss/dry-animate/lightspeed/_lightSpeedOut.scss
+++ b/scss/dry-animate/lightspeed/_lightSpeedOut.scss
@@ -1,20 +1,22 @@
 
 //////////////////////////////
 // lightspeedOut.scss
-// @src - https://github.com/daneden/animate.css/blob/master/source/lightspeed/lightspeedOut.css
+// @src - https://github.com/daneden/animate.css/blob/master/source/lightspeed/lightSpeedOut.css
 ///////////////////////////////
 
-%lightspeedOut {
-  animation-timing-function: ease-in;
-  @at-root {
-    @keyframes lightspeedOut {
-      0% {
-        opacity: 1;
-      }
+@if da-import("lightSpeedOut") == true {
+  %lightSpeedOut {
+    animation-timing-function: ease-in;
+    @at-root {
+      @keyframes lightSpeedOut {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        transform: translate3d(100%, 0, 0) skewX(30deg);
-        opacity: 0;
+        100% {
+          transform: translate3d(100%, 0, 0) skewX(30deg);
+          opacity: 0;
+        }
       }
     }
   }
