--- a/scss/dry-animate/rotating_entrances/_rotateIn.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateIn.scss
@@ -4,19 +4,21 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_entrances/rotateIn.css
 ///////////////////////////////
 
-%rotateIn {
-  @at-root {
-    @keyframes rotateIn {
-      0% {
-        transform-origin: center;
-        transform: rotate3d(0, 0, 1, -200deg);
-        opacity: 0;
-      }
+@if da-import("rotateIn") == true {
+  %rotateIn {
+    @at-root {
+      @keyframes rotateIn {
+        0% {
+          transform-origin: center;
+          transform: rotate3d(0, 0, 1, -200deg);
+          opacity: 0;
+        }
 
-      100% {
-        transform-origin: center;
-        transform: none;
-        opacity: 1;
+        100% {
+          transform-origin: center;
+          transform: none;
+          opacity: 1;
+        }
       }
     }
   }
