--- a/scss/dry-animate/rotating_entrances/_rotateInDownLeft.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateInDownLeft.scss
@@ -4,19 +4,21 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_entrances/rotateInDownLeft.css
 ///////////////////////////////
 
-%rotateInDownLeft {
-  @at-root {
-    @keyframes rotateInDownLeft {
-      0% {
-        transform-origin: left bottom;
-        transform: rotate3d(0, 0, 1, -45deg);
-        opacity: 0;
-      }
+@if da-import("rotateInDownLeft") == true {
+  %rotateInDownLeft {
+    @at-root {
+      @keyframes rotateInDownLeft {
+        0% {
+          transform-origin: left bottom;
+          transform: rotate3d(0, 0, 1, -45deg);
+          opacity: 0;
+        }
 
-      100% {
-        transform-origin: left bottom;
-        transform: none;
-        opacity: 1;
+        100% {
+          transform-origin: left bottom;
+          transform: none;
+          opacity: 1;
+        }
       }
     }
   }
