--- a/scss/dry-animate/rotating_exits/_rotateOutDownLeft.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutDownLeft.scss
@@ -4,18 +4,20 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_exits/rotateOutDownLeft.css
 ///////////////////////////////
 
-%rotateOutDownLeft {
-  @at-root {
-    @keyframes rotateOutDownLeft {
-      0% {
-        transform-origin: left bottom;
-        opacity: 1;
-      }
+@if da-import("rotateOutDownLeft") == true {
+  %rotateOutDownLeft {
+    @at-root {
+      @keyframes rotateOutDownLeft {
+        0% {
+          transform-origin: left bottom;
+          opacity: 1;
+        }
 
-      100% {
-        transform-origin: left bottom;
-        transform: rotate3d(0, 0, 1, 45deg);
-        opacity: 0;
+        100% {
+          transform-origin: left bottom;
+          transform: rotate3d(0, 0, 1, 45deg);
+          opacity: 0;
+        }
       }
     }
   }
