--- a/scss/dry-animate/rotating_exits/_rotateOutDownRight.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutDownRight.scss
@@ -4,18 +4,20 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_exits/rotateOutDownRight.css
 ///////////////////////////////
 
-%rotateOutDownRight {
-  @at-root {
-    @keyframes rotateOutDownRight {
-      0% {
-        transform-origin: right bottom;
-        opacity: 1;
-      }
+@if da-import("rotateOutDownRight") == true {
+  %rotateOutDownRight {
+    @at-root {
+      @keyframes rotateOutDownRight {
+        0% {
+          transform-origin: right bottom;
+          opacity: 1;
+        }
 
-      100% {
-        transform-origin: right bottom;
-        transform: rotate3d(0, 0, 1, -45deg);
-        opacity: 0;
+        100% {
+          transform-origin: right bottom;
+          transform: rotate3d(0, 0, 1, -45deg);
+          opacity: 0;
+        }
       }
     }
   }
