--- a/scss/dry-animate/rotating_exits/_rotateOutUpLeft.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutUpLeft.scss
@@ -4,18 +4,20 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_exits/rotateOutUpLeft.css
 ///////////////////////////////
 
-%rotateOutUpLeft {
-  @at-root {
-    @keyframes rotateOutUpLeft {
-      0% {
-        transform-origin: left bottom;
-        opacity: 1;
-      }
+@if da-import("rotateOutUpLeft") == true {
+  %rotateOutUpLeft {
+    @at-root {
+      @keyframes rotateOutUpLeft {
+        0% {
+          transform-origin: left bottom;
+          opacity: 1;
+        }
 
-      100% {
-        transform-origin: left bottom;
-        transform: rotate3d(0, 0, 1, -45deg);
-        opacity: 0;
+        100% {
+          transform-origin: left bottom;
+          transform: rotate3d(0, 0, 1, -45deg);
+          opacity: 0;
+        }
       }
     }
   }
