--- a/scss/dry-animate/rotating_exits/_rotateOutUpRight.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutUpRight.scss
@@ -4,18 +4,20 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/rotating_exits/rotateOutUpRight.css
 ///////////////////////////////
 
-%rotateOutUpRight {
-  @at-root {
-    @keyframes rotateOutUpRight {
-      0% {
-        transform-origin: right bottom;
-        opacity: 1;
-      }
+@if da-import("rotateOutUpRight") == true {
+  %rotateOutUpRight {
+    @at-root {
+      @keyframes rotateOutUpRight {
+        0% {
+          transform-origin: right bottom;
+          opacity: 1;
+        }
 
-      100% {
-        transform-origin: right bottom;
-        transform: rotate3d(0, 0, 1, 90deg);
-        opacity: 0;
+        100% {
+          transform-origin: right bottom;
+          transform: rotate3d(0, 0, 1, 90deg);
+          opacity: 0;
+        }
       }
     }
   }
