--- a/scss/dry-animate/sliding_entrances/_slideInDown.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInDown.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_entrances/slideInDown.css
 ///////////////////////////////
 
-%slideInDown {
-  @at-root {
-    @keyframes slideInDown {
-      0% {
-        transform: translate3d(0, -100%, 0);
-        visibility: visible;
-      }
+@if da-import("slideInDown") == true {
+  %slideInDown {
+    @at-root {
+      @keyframes slideInDown {
+        0% {
+          transform: translate3d(0, -100%, 0);
+          visibility: visible;
+        }
 
-      100% {
-        transform: translate3d(0, 0, 0);
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
       }
     }
   }
