--- a/scss/dry-animate/sliding_entrances/_slideInLeft.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInLeft.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_entrances/slideInLeft.css
 ///////////////////////////////
 
-%slideInLeft {
-  @at-root {
-    @keyframes slideInLeft {
-      0% {
-        transform: translate3d(-100%, 0, 0);
-        visibility: visible;
-      }
+@if da-import("slideInLeft") == true {
+  %slideInLeft {
+    @at-root {
+      @keyframes slideInLeft {
+        0% {
+          transform: translate3d(-100%, 0, 0);
+          visibility: visible;
+        }
 
-      100% {
-        transform: translate3d(0, 0, 0);
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
       }
     }
   }
