--- a/scss/dry-animate/sliding_entrances/_slideInRight.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInRight.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_entrances/slideInRight.css
 ///////////////////////////////
 
-%slideInRight {
-  @at-root {
-    @keyframes slideInRight {
-      0% {
-        transform: translate3d(100%, 0, 0);
-        visibility: visible;
-      }
+@if da-import("slideInRight") == true {
+  %slideInRight {
+    @at-root {
+      @keyframes slideInRight {
+        0% {
+          transform: translate3d(100%, 0, 0);
+          visibility: visible;
+        }
 
-      100% {
-        transform: translate3d(0, 0, 0);
+        100% {
+          transform: translate3d(0, 0, 0);
+        }
       }
     }
   }
