--- a/scss/dry-animate/sliding_exits/_slideOutLeft.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutLeft.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_exits/slideOutLeft.css
 ///////////////////////////////
 
-%slideOutLeft {
-  @at-root {
-    @keyframes slideOutLeft {
-      0% {
-        transform: translate3d(0, 0, 0);
-      }
+@if da-import("slideOutLeft") == true {
+  %slideOutLeft {
+    @at-root {
+      @keyframes slideOutLeft {
+        0% {
+          transform: translate3d(0, 0, 0);
+        }
 
-      100% {
-        visibility: hidden;
-        transform: translate3d(-100%, 0, 0);
+        100% {
+          visibility: hidden;
+          transform: translate3d(-100%, 0, 0);
+        }
       }
     }
   }
