--- a/scss/dry-animate/sliding_exits/_slideOutRight.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutRight.scss
@@ -4,16 +4,18 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/sliding_exits/slideOutRight.css
 ///////////////////////////////
 
-%slideOutRight {
-  @at-root {
-    @keyframes slideOutRight {
-      0% {
-        transform: translate3d(0, 0, 0);
-      }
+@if da-import("slideOutRight") == true {
+  %slideOutRight {
+    @at-root {
+      @keyframes slideOutRight {
+        0% {
+          transform: translate3d(0, 0, 0);
+        }
 
-      100% {
-        visibility: hidden;
-        transform: translate3d(100%, 0, 0);
+        100% {
+          visibility: hidden;
+          transform: translate3d(100%, 0, 0);
+        }
       }
     }
   }
