--- a/scss/dry-animate/specials/_rollIn.scss
+++ b/scss/dry-animate/specials/_rollIn.scss
@@ -4,17 +4,19 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/specials/rollIn.css
 ///////////////////////////////
 
-%rollIn {
-  @at-root {
-    @keyframes rollIn {
-      0% {
-        opacity: 0;
-        transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
-      }
+@if da-import("rollIn") == true {
+  %rollIn {
+    @at-root {
+      @keyframes rollIn {
+        0% {
+          opacity: 0;
+          transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+        }
 
-      100% {
-        opacity: 1;
-        transform: none;
+        100% {
+          opacity: 1;
+          transform: none;
+        }
       }
     }
   }
