--- a/scss/dry-animate/specials/_rollOut.scss
+++ b/scss/dry-animate/specials/_rollOut.scss
@@ -6,16 +6,18 @@
 
 /* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
-%rollOut {
-  @at-root {
-    @keyframes rollOut {
-      0% {
-        opacity: 1;
-      }
+@if da-import("rollOut") == true {
+  %rollOut {
+    @at-root {
+      @keyframes rollOut {
+        0% {
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 0;
-        transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+        100% {
+          opacity: 0;
+          transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+        }
       }
     }
   }
