--- a/scss/dry-animate/zooming_exits/_zoomOutLeft.scss
+++ b/scss/dry-animate/zooming_exits/_zoomOutLeft.scss
@@ -4,18 +4,20 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/zooming_exits/zoomOutLeft.css
 ///////////////////////////////
 
-%zoomOutLeft {
-  @at-root {
-    @keyframes zoomOutLeft {
-      40% {
-        opacity: 1;
-        transform: scale3d(.475, .475, .475) translate3d(42px, 0, 0);
-      }
+@if da-import("zoomOutLeft") == true {
+  %zoomOutLeft {
+    @at-root {
+      @keyframes zoomOutLeft {
+        40% {
+          opacity: 1;
+          transform: scale3d(.475, .475, .475) translate3d(42px, 0, 0);
+        }
 
-      100% {
-        opacity: 0;
-        transform: scale(.1) translate3d(-2000px, 0, 0);
-        transform-origin: left center;
+        100% {
+          opacity: 0;
+          transform: scale(.1) translate3d(-2000px, 0, 0);
+          transform-origin: left center;
+        }
       }
     }
   }
