--- a/scss/dry-animate/zooming_exits/_zoomOutUp.scss
+++ b/scss/dry-animate/zooming_exits/_zoomOutUp.scss
@@ -4,20 +4,22 @@
 // @src - https://github.com/daneden/animate.css/blob/master/source/zooming_exits/zoomOutUp.css
 ///////////////////////////////
 
-%zoomOutUp {
-  @at-root {
-    @keyframes zoomOutUp {
-      40% {
-        opacity: 1;
-        transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
-        animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
-      }
+@if da-import("zoomOutUp") == true {
+  %zoomOutUp {
+    @at-root {
+      @keyframes zoomOutUp {
+        40% {
+          opacity: 1;
+          transform: scale3d(.475, .475, .475) translate3d(0, 60px, 0);
+          animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+        }
 
-      100% {
-        opacity: 0;
-        transform: scale3d(.1, .1, .1) translate3d(0, -2000px, 0);
-        transform-origin: center bottom;
-        animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+        100% {
+          opacity: 0;
+          transform: scale3d(.1, .1, .1) translate3d(0, -2000px, 0);
+          transform-origin: center bottom;
+          animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+        }
       }
     }
   }
