Use 'from' & 'to' instd of 0% & 100%
 - Consistency with
https://github.com/daneden/animate.css/commit/a479864d9d64bdbf9704090dea
3a6832f3200e38

--- a/scss/dry-animate/attention_seekers/_rubberBand.scss
+++ b/scss/dry-animate/attention_seekers/_rubberBand.scss
@@ -6,7 +6,7 @@
 
 @if da-import("rubberBand") == true {
   @keyframes rubberBand {
-    0% {
+    from {
       transform: scale3d(1, 1, 1);
     }
 
@@ -30,7 +30,7 @@
       transform: scale3d(1.05, .95, 1);
     }
 
-    100% {
+    to {
       transform: scale3d(1, 1, 1);
     }
   }
