--- a/scss/dry-animate/fading_entrances/_fadeIn.scss
+++ b/scss/dry-animate/fading_entrances/_fadeIn.scss
@@ -6,11 +6,11 @@
 
 @if da-import("fadeIn") == true {
   @keyframes fadeIn {
-    0% {
+    from {
       opacity: 0;
     }
 
-    100% {
+    to {
       opacity: 1;
     }
   }
