--- a/scss/dry-animate/flippers/_flip.scss
+++ b/scss/dry-animate/flippers/_flip.scss
@@ -6,7 +6,7 @@
 
 @if da-import("flip") == true {
   @keyframes flip {
-    0% {
+    from {
       transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
       animation-timing-function: ease-out;
     }
@@ -26,7 +26,7 @@
       animation-timing-function: ease-in;
     }
 
-    100% {
+    to {
       transform: perspective(400px);
       animation-timing-function: ease-in;
     }
