--- a/scss/dry-animate/flippers/_flipOutX.scss
+++ b/scss/dry-animate/flippers/_flipOutX.scss
@@ -6,7 +6,7 @@
 
 @if da-import("flipOutX") == true {
   @keyframes flipOutX {
-    0% {
+    from {
       transform: perspective(400px);
     }
 
@@ -15,7 +15,7 @@
       opacity: 1;
     }
 
-    100% {
+    to {
       transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
       opacity: 0;
     }
