--- a/scss/dry-animate/lightspeed/_lightSpeedIn.scss
+++ b/scss/dry-animate/lightspeed/_lightSpeedIn.scss
@@ -6,7 +6,7 @@
 
 @if da-import("lightSpeedIn") == true {
   @keyframes lightSpeedIn {
-    0% {
+    from {
       transform: translate3d(100%, 0, 0) skewX(-30deg);
       opacity: 0;
     }
@@ -21,7 +21,7 @@
       opacity: 1;
     }
 
-    100% {
+    to {
       transform: none;
       opacity: 1;
     }
