--- a/scss/dry-animate/rotating_entrances/_rotateInDownLeft.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateInDownLeft.scss
@@ -6,13 +6,13 @@
 
 @if da-import("rotateInDownLeft") == true {
   @keyframes rotateInDownLeft {
-    0% {
+    from {
       transform-origin: left bottom;
       transform: rotate3d(0, 0, 1, -45deg);
       opacity: 0;
     }
 
-    100% {
+    to {
       transform-origin: left bottom;
       transform: none;
       opacity: 1;
