--- a/scss/dry-animate/rotating_exits/_rotateOutDownRight.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutDownRight.scss
@@ -6,12 +6,12 @@
 
 @if da-import("rotateOutDownRight") == true {
   @keyframes rotateOutDownRight {
-    0% {
+    from {
       transform-origin: right bottom;
       opacity: 1;
     }
 
-    100% {
+    to {
       transform-origin: right bottom;
       transform: rotate3d(0, 0, 1, -45deg);
       opacity: 0;
