--- a/scss/dry-animate/rotating_exits/_rotateOutUpLeft.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOutUpLeft.scss
@@ -6,12 +6,12 @@
 
 @if da-import("rotateOutUpLeft") == true {
   @keyframes rotateOutUpLeft {
-    0% {
+    from {
       transform-origin: left bottom;
       opacity: 1;
     }
 
-    100% {
+    to {
       transform-origin: left bottom;
       transform: rotate3d(0, 0, 1, -45deg);
       opacity: 0;
