--- a/scss/dry-animate/attention_seekers/_pulse.scss
+++ b/scss/dry-animate/attention_seekers/_pulse.scss
@@ -8,7 +8,7 @@
 
 @if da-import("pulse") == true {
   @keyframes pulse {
-    0% {
+    from {
       transform: scale3d(1, 1, 1);
     }
 
@@ -16,7 +16,7 @@
       transform: scale3d(1.05, 1.05, 1.05);
     }
 
-    100% {
+    to {
       transform: scale3d(1, 1, 1);
     }
   }
