--- a/scss/dry-animate/bouncing_entrances/_bounceIn.scss
+++ b/scss/dry-animate/bouncing_entrances/_bounceIn.scss
@@ -6,11 +6,11 @@
 
 @if da-import("bounceIn") == true {
   @keyframes bounceIn {
-    0%, 20%, 40%, 60%, 80%, 100% {
+    from, 20%, 40%, 60%, 80%, to {
       animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
     }
 
-    0% {
+    from {
       opacity: 0;
       transform: scale3d(.3, .3, .3);
     }
@@ -32,7 +32,7 @@
       transform: scale3d(.97, .97, .97);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: scale3d(1, 1, 1);
     }
