--- a/scss/dry-animate/bouncing_entrances/_bounceInLeft.scss
+++ b/scss/dry-animate/bouncing_entrances/_bounceInLeft.scss
@@ -6,11 +6,11 @@
 
 @if da-import("bounceInLeft") == true {
   @keyframes bounceInLeft {
-    0%, 60%, 75%, 90%, 100% {
+    from, 60%, 75%, 90%, to {
       animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
     }
 
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(-3000px, 0, 0);
     }
@@ -28,7 +28,7 @@
       transform: translate3d(5px, 0, 0);
     }
 
-    100% {
+    to {
       transform: none;
     }
   }
