--- a/scss/dry-animate/bouncing_exits/_bounceOut.scss
+++ b/scss/dry-animate/bouncing_exits/_bounceOut.scss
@@ -15,7 +15,7 @@
       transform: scale3d(1.1, 1.1, 1.1);
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: scale3d(.3, .3, .3);
     }
