--- a/scss/dry-animate/fading_entrances/_fadeInDown.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInDown.scss
@@ -6,12 +6,12 @@
 
 @if da-import("fadeInDown") == true {
   @keyframes fadeInDown {
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(0, -100%, 0);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: none;
     }
