--- a/scss/dry-animate/fading_entrances/_fadeInLeftBig.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInLeftBig.scss
@@ -6,12 +6,12 @@
 
 @if da-import("fadeInLeftBig") == true {
   @keyframes fadeInLeftBig {
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(-2000px, 0, 0);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: none;
     }
