--- a/scss/dry-animate/fading_entrances/_fadeInRight.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInRight.scss
@@ -6,12 +6,12 @@
 
 @if da-import("fadeInRight") == true {
   @keyframes fadeInRight {
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(100%, 0, 0);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: none;
     }
