--- a/scss/dry-animate/fading_entrances/_fadeInRightBig.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInRightBig.scss
@@ -6,12 +6,12 @@
 
 @if da-import("fadeInRightBig") == true {
   @keyframes fadeInRightBig {
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(2000px, 0, 0);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: none;
     }
