--- a/scss/dry-animate/fading_entrances/_fadeInUpBig.scss
+++ b/scss/dry-animate/fading_entrances/_fadeInUpBig.scss
@@ -6,12 +6,12 @@
 
 @if da-import("fadeInUpBig") == true {
   @keyframes fadeInUpBig {
-    0% {
+    from {
       opacity: 0;
       transform: translate3d(0, 2000px, 0);
     }
 
-    100% {
+    to {
       opacity: 1;
       transform: none;
     }
