--- a/scss/dry-animate/fading_exits/_fadeOutDownBig.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutDownBig.scss
@@ -6,11 +6,11 @@
 
 @if da-import("fadeOutDownBig") == true {
   @keyframes fadeOutDownBig {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: translate3d(0, 2000px, 0);
     }
