--- a/scss/dry-animate/fading_exits/_fadeOutLeft.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutLeft.scss
@@ -6,11 +6,11 @@
 
 @if da-import("fadeOutLeft") == true {
   @keyframes fadeOutLeft {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: translate3d(-100%, 0, 0);
     }
