--- a/scss/dry-animate/fading_exits/_fadeOutRight.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutRight.scss
@@ -6,11 +6,11 @@
 
 @if da-import("fadeOutRight") == true {
   @keyframes fadeOutRight {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: translate3d(100%, 0, 0);
     }
