--- a/scss/dry-animate/fading_exits/_fadeOutRightBig.scss
+++ b/scss/dry-animate/fading_exits/_fadeOutRightBig.scss
@@ -6,11 +6,11 @@
 
 @if da-import("fadeOutRightBig") == true {
   @keyframes fadeOutRightBig {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: translate3d(2000px, 0, 0);
     }
