--- a/scss/dry-animate/flippers/_flipOutY.scss
+++ b/scss/dry-animate/flippers/_flipOutY.scss
@@ -6,7 +6,7 @@
 
 @if da-import("flipOutY") == true {
   @keyframes flipOutY {
-    0% {
+    from {
       transform: perspective(400px);
     }
 
@@ -15,7 +15,7 @@
       opacity: 1;
     }
 
-    100% {
+    to {
       transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
       opacity: 0;
     }
