--- a/scss/dry-animate/lightspeed/_lightSpeedOut.scss
+++ b/scss/dry-animate/lightspeed/_lightSpeedOut.scss
@@ -6,11 +6,11 @@
 
 @if da-import("lightSpeedOut") == true {
   @keyframes lightSpeedOut {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       transform: translate3d(100%, 0, 0) skewX(30deg);
       opacity: 0;
     }
