--- a/scss/dry-animate/rotating_entrances/_rotateIn.scss
+++ b/scss/dry-animate/rotating_entrances/_rotateIn.scss
@@ -6,13 +6,13 @@
 
 @if da-import("rotateIn") == true {
   @keyframes rotateIn {
-    0% {
+    from {
       transform-origin: center;
       transform: rotate3d(0, 0, 1, -200deg);
       opacity: 0;
     }
 
-    100% {
+    to {
       transform-origin: center;
       transform: none;
       opacity: 1;
