--- a/scss/dry-animate/rotating_exits/_rotateOut.scss
+++ b/scss/dry-animate/rotating_exits/_rotateOut.scss
@@ -6,12 +6,12 @@
 
 @if da-import("rotateOut") == true {
   @keyframes rotateOut {
-    0% {
+    from {
       transform-origin: center;
       opacity: 1;
     }
 
-    100% {
+    to {
       transform-origin: center;
       transform: rotate3d(0, 0, 1, 200deg);
       opacity: 0;
