--- a/scss/dry-animate/sliding_entrances/_slideInDown.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInDown.scss
@@ -6,12 +6,12 @@
 
 @if da-import("slideInDown") == true {
   @keyframes slideInDown {
-    0% {
+    from {
       transform: translate3d(0, -100%, 0);
       visibility: visible;
     }
 
-    100% {
+    to {
       transform: translate3d(0, 0, 0);
     }
   }
