--- a/scss/dry-animate/sliding_entrances/_slideInRight.scss
+++ b/scss/dry-animate/sliding_entrances/_slideInRight.scss
@@ -6,12 +6,12 @@
 
 @if da-import("slideInRight") == true {
   @keyframes slideInRight {
-    0% {
+    from {
       transform: translate3d(100%, 0, 0);
       visibility: visible;
     }
 
-    100% {
+    to {
       transform: translate3d(0, 0, 0);
     }
   }
