--- a/scss/dry-animate/sliding_exits/_slideOutDown.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutDown.scss
@@ -6,11 +6,11 @@
 
 @if da-import("slideOutDown") == true {
   @keyframes slideOutDown {
-    0% {
+    from {
       transform: translate3d(0, 0, 0);
     }
 
-    100% {
+    to {
       visibility: hidden;
       transform: translate3d(0, 100%, 0);
     }
