--- a/scss/dry-animate/sliding_exits/_slideOutLeft.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutLeft.scss
@@ -6,11 +6,11 @@
 
 @if da-import("slideOutLeft") == true {
   @keyframes slideOutLeft {
-    0% {
+    from {
       transform: translate3d(0, 0, 0);
     }
 
-    100% {
+    to {
       visibility: hidden;
       transform: translate3d(-100%, 0, 0);
     }
