--- a/scss/dry-animate/sliding_exits/_slideOutRight.scss
+++ b/scss/dry-animate/sliding_exits/_slideOutRight.scss
@@ -6,11 +6,11 @@
 
 @if da-import("slideOutRight") == true {
   @keyframes slideOutRight {
-    0% {
+    from {
       transform: translate3d(0, 0, 0);
     }
 
-    100% {
+    to {
       visibility: hidden;
       transform: translate3d(100%, 0, 0);
     }
