--- a/scss/dry-animate/specials/_rollOut.scss
+++ b/scss/dry-animate/specials/_rollOut.scss
@@ -8,11 +8,11 @@
 
 @if da-import("rollOut") == true {
   @keyframes rollOut {
-    0% {
+    from {
       opacity: 1;
     }
 
-    100% {
+    to {
       opacity: 0;
       transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
     }
