--- a/scss/dry-animate/zooming_entrances/_zoomIn.scss
+++ b/scss/dry-animate/zooming_entrances/_zoomIn.scss
@@ -6,7 +6,7 @@
 
 @if da-import("zoomIn") == true {
   @keyframes zoomIn {
-    0% {
+    from {
       opacity: 0;
       transform: scale3d(.3, .3, .3);
     }
