--- a/scss/dry-animate/zooming_entrances/_zoomInDown.scss
+++ b/scss/dry-animate/zooming_entrances/_zoomInDown.scss
@@ -6,7 +6,7 @@
 
 @if da-import("zoomInDown") == true {
   @keyframes zoomInDown {
-    0% {
+    from {
       opacity: 0;
       transform: scale3d(.1, .1, .1) translate3d(0, -1000px, 0);
       animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
